Apps_deployment/WebPortal-Group/webportal-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webportal-deployment
  namespace: frontend-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webportal-service
  template:
    metadata:
      labels:
        app: webportal-service
    spec:
      imagePullSecrets:
      - name: my-registry-creds
      containers:
      - name: webportal-service
        image: 192.168.8.142:5000/webportal-service:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 8083
          protocol: TCP
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
        resources:
          requests:
            cpu: "50m"
            memory: "64Mi"
          limits:
            cpu: "100m"
            memory: "128Mi"
        livenessProbe:
          httpGet:
            path: /
            port: 8083
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: 8083
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 3
      - name: nginx-exporter
        image: nginx/nginx-prometheus-exporter:0.11.0
        imagePullPolicy: IfNotPresent
        args:
        - -nginx.scrape-uri=http://localhost:8083/stub_status
        ports:
        - containerPort: 9113
          name: metrics
        resources:
          requests:
            cpu: "10m"
            memory: "20Mi"
          limits:
            cpu: "20m"
            memory: "40Mi"
      volumes:
      - name: nginx-config
        configMap:
          name: nginx-config
