Apps_deployment/WebPortal-Group/webportal-service.yml
apiVersion: v1
kind: Service
metadata:
  name: webportal-service
  namespace: frontend-service
  labels:
    app: webportal-service
spec:
  selector:
    app: webportal-service
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8083
      name: http
    - protocol: TCP
      port: 9113
      targetPort: 9113
      name: metrics
  type: ClusterIP
